--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,7 +9,7 @@
 
 
 :root {
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family:"Old Standard TT", serif;
   line-height: 1.5;
   font-weight: 400;
 
