--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -18,6 +18,12 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+
+  img {
+    width: 70px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 form {
@@ -25,8 +31,8 @@ form {
 }
 .contact-input {
   color: white;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 18px;
+  font-family: "Old Standard TT", serif;
+  font-size: 15px;
   border-radius: 5px;
   background-color: transparent;
   border: 1px solid #f5f1f1;
@@ -43,14 +49,14 @@ textarea {
 }
 
 [type="submit"] {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Old Standard TT", serif;
   width: 100%;
   background: #364f3b;
   border-radius: 5px;
   border: 1px solid #f5f1f1;
   cursor: pointer;
   color: white;
-  font-size: 24px;
+  font-size: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-top: -6px;
@@ -61,4 +67,10 @@ textarea {
 
 [type="submit"]:hover {
   background: #293c2c;
+}
+
+@media (max-width: 768px) {
+  .contact {
+    display: block;
+  }
 }
