--- a/src/index.scss
+++ b/src/index.scss
@@ -1,30 +1,23 @@
 
 #root {
-  max-width: 1280px;
+  // max-width: 1280px;
   margin: 0 auto;
-  // padding: 2rem;
-  padding: 10px;
+  padding: 0;
   text-align: center;
+  border: 1px solid black;
+  
 }
 
 
-:root {
+body {
   font-family:"Old Standard TT", serif;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+   color: antiquewhite;
   background-color: #2a3b2a;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  color: white;
+  color: antiquewhite;
   
 }
 
