--- a/src/styles/_startpage.scss
+++ b/src/styles/_startpage.scss
@@ -9,6 +9,7 @@
     height: 350px;
     object-fit: cover;
     padding: 20px;
+    border-radius: 10%;
 }
 
 .home-split h2 {
@@ -16,14 +17,15 @@
     font-size: 40px;
     font-family: fantasy;
     color: antiquewhite;
-    padding: 30px;
+    padding: 40px;
+    
 }
 
 .home-btn {
     position: absolute;
     // margin-top: 200px;
     // margin-left: 50px;
-    transform: translate(40%, 250px);
+    transform: translate(40%, 200px);
     width: 200px;
     height: 50px;
 }
