added an about us section and some style on homepage

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,6 @@
 .home-header {
     position: relative;
+    margin-bottom: 20px;
 }
 
 .restaurantpic {
@@ -11,7 +12,7 @@
 
 .home-header h1 {
     position: absolute;
-    font-size: 80px;
+    font-size: 100px;
     font-family: fantasy;
     color: antiquewhite;
     top: 30%;
@@ -27,4 +28,24 @@
     height: 100%;
     // background: linear-gradient(rgba(255, 255, 255, 0.307), rgba(255, 255, 255, 0.049)); 
     background: linear-gradient(rgba(7, 58, 7, 0.222), rgba(7, 58, 7, 0.058));
+  }
+
+  .text {
+    font-size: 20px;
+    background-color: rgba(116, 87, 87, 0.438);
+    border-radius: 10px;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
+    padding: 15px;
+    transition: background-color 0.5s ease-out;
+  }
+
+  .text:hover {
+    background-color: rgba(116, 87, 87, 0.828);
+    transition-delay: 0.5s;
+  }
+
+  .text h2 {
+    font-family: fantasy;
   }
