--- a/src/styles/_startpage.scss
+++ b/src/styles/_startpage.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    margin: 70px;
 }
 
 .home-split img {
@@ -10,6 +11,7 @@
     object-fit: cover;
     padding: 20px;
     border-radius: 10%;
+    border: 1px solid rgba(116, 87, 87, 0.438);
 }
 
 .home-split h2 {
@@ -18,7 +20,7 @@
     font-family: fantasy;
     color: antiquewhite;
     padding: 40px;
-    
+    margin-top: 50px;
 }
 
 .home-btn {
@@ -28,4 +30,6 @@
     transform: translate(40%, 200px);
     width: 200px;
     height: 50px;
+    font-size: 20px;
+    padding: 10px;
 }
