--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,26 @@ a {
 }
 
 
+button {
+  display: block;
+  width: 150px;
+  margin: 15px;
+  font-family: "Old Standard TT", serif;
+  background: #364f3b;
+  border-radius: 5px;
+  border: 1px solid antiquewhite;
+  cursor: pointer;
+  color: white;
+  font-size: 15px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  margin-top: -6px;
+  box-shadow:
+    rgba(0, 0, 0, 0.19) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+  &:hover {
+    background-color: #023020;
+  }
+
+}
