--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,45 +5,24 @@
 
 .footer {
   display: flex;
+  align-items: center;
 
   .adress,
+  .open-hours,
   .links {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    width: 50%;
     flex-direction: column;
+    justify-content: center;
+    width: 33%;
+    height: 25vh;
   }
-
 }
 
 .copy {
   font-size: 12px;
 }
 
-button {
-  display: block;
-  width: 150px;
-  margin: 15px;
-  font-family: "Old Standard TT", serif;
-  background: #364f3b;
-  border-radius: 5px;
-  border: 1px solid antiquewhite;
-  cursor: pointer;
-  color: white;
-  font-size: 15px;
-  padding-top: 5px;
-  padding-bottom: 10px;
-  margin-top: -6px;
-  box-shadow:
-    rgba(0, 0, 0, 0.19) 0px 10px 20px,
-    rgba(0, 0, 0, 0.23) 0px 6px 6px;
-
-  &:hover {
-    background-color: #023020;
-  }
-
-  a {
-    text-decoration: none;
+@media (max-width: 650px) {
+  .footer {
+    flex-direction: column;
   }
 }
