--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -74,4 +74,9 @@ textarea {
   .contact-container {
     display: block;
   }
+
+  .contact-form {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
