--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,14 +6,18 @@
 .footer {
   display: flex;
   align-items: center;
+  
 
   .adress,
   .open-hours,
   .links {
     flex-direction: column;
     justify-content: center;
-    width: 33%;
+    flex:1;
     height: 25vh;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    
   }
 }
 
