--- a/src/styles/_bookinglist.scss
+++ b/src/styles/_bookinglist.scss
@@ -1,6 +1,100 @@
+h1 {
+    margin-top: 30px;
+}
 
+.booking-container {
+    font-size: 20px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 50px;
 
-.input-date, .input-time, .input-guests {
-    border-radius: 5px;
+}
+
+.buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
     
 }
+
+.delete-button, .update-button {
+    margin-top: 10px;
+    padding: 3px;
+    width: 100px;
+   
+}
+
+.booking-details {
+    margin: 10px;
+    color: #2a3b2a;
+    background-color: antiquewhite;
+    flex-basis: 33%;
+    min-width: 250px;
+    border: 2px solid antiquewhite;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.customer-details {
+    padding: 20px;
+
+    h4 {
+        text-decoration: underline;
+    }
+}
+
+.input-guests {
+    width: 70px;
+}
+
+.guest-label, .input-guests {
+    text-align: center;
+
+}
+
+
+.input-date, .input-guests, .select, option{
+    color:#2a3b2a;
+    font-size: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 5px;
+    font-family: "Old Standard TT", serif;
+    background-color: white;
+
+    &:disabled{
+        font-weight: bold;
+        color:#2a3b2a;
+        border: none;
+        background-color: antiquewhite;
+    }
+
+}
+
+.loader {
+
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: 100px;
+    border: 10px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
