--- a/src/styles/_checktables.scss
+++ b/src/styles/_checktables.scss
@@ -23,13 +23,14 @@
 }
 
 .availableTimes {
-    margin-top: 2rem;
+	margin-top: 2rem;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
 }
 
 .radios {
+	width: 100px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
